<resources>
    <string name="app_name">MBP2Go</string>


    <string name="title_activity_main2">Main2Activity</string>

    <string name="key">key</string>
    <string name="action_add">action_add</string>
    <string name="action_qrscann">action_qrscann</string>


    <string name="next">Next</string>
    <string name="deployoptions">Deploy \n options</string>
    <string name="skip">Skip</string>
    <string name="start">Start</string>
    <string name="title_slide1">Connecting Devices</string>
    <string name="desc_slide1">dynamic device binding based on their type</string>
    <string name="title_slide2">Smart Home</string>
    <string name="desc_slide2">Make every thing smarter</string>
    <string name="title_slide3">Smart Energy</string>
    <string name="desc_slide3">avoid unnecessary generation and cost</string>
    <string name="signup">Sign up</string>
    <string name="loginintro">Already have an account? Sign in</string>
    <string name="title_activity_sign_up">SignUp</string>

    <string name="device">Devices</string>
    <string name="setting">Settings</string>
    <string name="live">Live sensor values</string>
    <string name="history">Historical sensor values</string>
    <string name="monitoring">Monitoring operators</string>
    <string name="rules">Rules</string>


    <string name="title_activity_device_overview">DeviceOverviewActivity</string>
    <string name="title_activity_device_finder">DeviceFinderActivity</string>

    <string name="btn_activity_device_finder">register other device</string>
    <string name="btn_smartphonesensors_activity_device_finder">register \n smartphone and sensors</string>


    <string-array name="action_dialog_sensors">
        <item>Edit</item>
        <item>Delete</item>
    </string-array>

    <string-array name="action_dialog_rule">
        <item>Delete</item>
    </string-array>

    <string-array name="action_dialog_gridview">
        <item>Delete</item>
    </string-array>


    <string-array name="sensors">
        <item>@string/sensor_temperature</item>
        <item>@string/sensor_pressure</item>
        <item>@string/sensor_gps</item>
        <item>@string/sensor_light</item>

    </string-array>

    <string name="sensor_temperature">Temperature</string>
    <string name="sensor_pressure">Pressure</string>
    <string name="sensor_gps">GPS</string>
    <string name="sensor_light">Light</string>


    <string-array name="ruleactions">
        <item>@string/actuator</item>
        <item>@string/iftt</item>
        <item>@string/component</item>

    </string-array>

    <string name="actuator">Actuator action</string>
    <string name="iftt">IFTT webhook</string>
    <string name="component">Component deployment</string>


    <string-array name="devicetype">
        <item>@string/device_raspberrypie</item>
        <item>@string/device_arduino</item>
        <item>@string/device_computer</item>
        <item>@string/device_audiosystem</item>
        <item>@string/device_camera</item>
        <item>@string/device_gateway</item>
        <item>@string/device_Laptop</item>
        <item>@string/device_NodeMCU</item>
        <item>@string/device_Smartphone</item>
        <item>@string/device_Smartwatch</item>
        <item>@string/device_TV</item>
        <item>@string/device_VoiceController</item>
        <item>@string/device_other</item>

    </string-array>

    <string name="device_raspberrypie">Raspberry Pi</string>
    <string name="device_arduino">Arduino</string>
    <string name="device_other">Other</string>
    <string name="device_computer">Computer</string>
    <string name="device_audiosystem">Audio System</string>
    <string name="device_camera">Camera</string>
    <string name="device_gateway">Gateway</string>
    <string name="device_Laptop">Laptop</string>
    <string name="device_NodeMCU">NodeMCU</string>
    <string name="device_Smartphone">Smartphone</string>
    <string name="device_Smartwatch">Smartwatch</string>
    <string name="device_TV">TV</string>
    <string name="device_VoiceController">Voice Controller</string>

    <string name="title_activity_test">test</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_rules_overview">Rules Overview</string>
    <string name="title_activity_rule_engine_overview">RuleEngineOverviewActivity</string>
    <string name="title_activity_select_thing">SelectThingActivity</string>
    <string name="title_activity_select_action">SelectActionActivity</string>
    <string name="title_activity_history_diagramm">HistoryDiagrammActivity</string>


    <string name="ruleenigine_setting_operatorbig"> &gt; </string>
    <string name="ruleenigine_setting_operatorlittle">&lt;</string>

    <string-array name="list">
        <item>@string/greaterthan</item>
        <item>@string/lessthan</item>
        <item>@string/equalto</item>
        <item>@string/notequalto</item>
        <item>@string/greaterthanorequalto</item>
        <item>@string/lessthanorequalto</item>
    </string-array>


    <string name="notequalto"> != </string>
    <string name="equalto"> = </string>
    <string name="greaterthan"> > </string>
    <string name="greaterthanorequalto"> >= </string>
    <string name="lessthan">&lt;</string>
    <string name="lessthanorequalto">&lt;=</string>


    <string name="Temperature">Temperature</string>
    <string name="Motion">Motion</string>
    <string name="Camera">Camera</string>
    <string name="Location">Location</string>
    <string name="Gas">Gas</string>
    <string name="Sound">Sound</string>
    <string name="Touch">Touch</string>
    <string name="Humidity">Humidity</string>
    <string name="Vibration">Vibration</string>
    <string name="Gyroscope">Gyroscope</string>
    <string name="Proximity">Proximity</string>
    <string name="Acceleration">Acceleration</string>
    <string name="LightFlicker">Light Flicker</string>

    <string name="Speaker">Speaker</string>
    <string name="Light">Light</string>
    <string name="Motor">Motor</string>
    <string name="Heater">Heater</string>
    <string name="AirConditioner">Air Conditioner</string>
    <string name="Buzzer">Buzzer</string>
    <string name="Switch">Switch</string>
    <string name="LED">LED</string>

    <string-array name="componentType">
        <item>@string/Temperature</item>
        <item>@string/Motion</item>
        <item>@string/Camera</item>
        <item>@string/Location</item>
        <item>@string/Gas</item>
        <item>@string/Sound</item>
        <item>@string/Touch</item>
        <item>@string/Humidity</item>
        <item>@string/Vibration</item>
        <item>@string/Gyroscope</item>
        <item>@string/Proximity</item>
        <item>@string/Acceleration</item>
        <item>@string/LightFlicker</item>
    </string-array>


    <string-array name="actuatorcomponentType">
        <item>@string/Speaker</item>
        <item>@string/Light</item>
        <item>@string/Vibration</item>
        <item>@string/Motor</item>
        <item>@string/Heater</item>
        <item>@string/AirConditioner</item>
        <item>@string/Buzzer</item>
        <item>@string/Switch</item>
        <item>@string/LED</item>
    </string-array>
    <string name="title_activity_monitoring_device_overview">MonitoringDeviceOverviewActivity
    </string>
    <string name="title_activity_monitoring_deploy_device">MonitoringDeployDeviceActivity</string>
    <string name="title_activity_monitoring_diagramm">MonitoringDiagrammActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_rule_engine_action">RuleEngineActionActivity</string>

</resources>

